# crow

./: .env.example  .gitignore  .gitmodules  .mcp.json  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  models.example.json  models.json  package-lock.json  package.json  railway.json  render.yaml  start.bat  start.command  start.sh
bundles/capstone-tracker/: Dockerfile  README.md  docker-compose.yml  manifest.json  pyproject.toml
bundles/capstone-tracker/src/: server.py  templates_config.py
bundles/capstone-tracker/src/models/: database.py
bundles/capstone-tracker/src/routes/: advocacy.py  ereader.py  notes.py  pir.py
bundles/capstone-tracker/src/services/: email_service.py  ereader_pdf.py  ereader_tts.py  notes_ocr.py
bundles/capstone-tracker/src/tasks/: pir_tasks.py
bundles/capstone-tracker/src/templates/: advocacy.html  base.html  ereader.html  note_editor.html  note_text_editor.html  notes.html  pir.html
bundles/rookery/: .env.example  Dockerfile  README.md  VENDORED.md  config-gen.mjs  docker-compose.yml  entrypoint.sh  host-shim.mjs  manifest.json  pyproject.toml  run.sh  scrub-env.sh  wrapper-exec.sh
bundles/rookery/panel/: rookery.js  routes.js
bundles/rookery/scripts/: rookery-egress-lock.sh  rookery-egress-verify.sh
bundles/rookery/src/rookery_manifest/: assemble.py  cli.py  manifest.py
bundles/rookery/tests/: test_assemble.py  test_cli.py  test_config_gen.py  test_egress_lock.py  test_env_filtering.py  test_manifest.py  test_mcp_core.py  test_openalex.py  test_vendor_drift.py
(+2474 files in other folders)
