[project]
name = "capstone-tracker"
version = "1.0.0"
description = "Capstone Tracker: PIR + notes + advocacy bundle for crow-gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "torch>=2.4",
    "transformers>=4.44",
    "pillow>=10.4",
    "markdown2>=2.5",
    "pydantic>=2.8",
    "edge-tts>=7.0",
    "pymupdf>=1.24",
]

[tool.uv]
package = false
