[project]
name = "rookery-bundle"
version = "0.1.0"
description = "Rookery experiment-audit adapter + MCP server for the Crow rookery bundle"
requires-python = ">=3.12"
dependencies = ["mcp>=1.25.0"]

[project.scripts]
rookery-manifest = "rookery_manifest.cli:main"
rookery-mcp = "rookery_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rookery_manifest", "src/rookery_mcp"]
